[gd_scene load_steps=5 format=3 uid="uid://rtcim8ma6gwl"]

[ext_resource type="Script" uid="uid://buk7xbnq0c6yi" path="res://main_window/side_panel/saved_searches/saved_item/saved_item.gd" id="1_xhyd6"]
[ext_resource type="Script" uid="uid://bqai4pv020yjf" path="res://custom/tooltip.gd" id="2_5q2o3"]
[ext_resource type="Texture2D" uid="uid://b025qxfatvgs0" path="res://main_window/side_panel/saved_searches/saved_item/images/repeat_search.svg" id="3_xhyd6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cc2va"]
bg_color = Color(0.505882, 0.631373, 0.756863, 1)
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[node name="SavedItem" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 101.0
grow_horizontal = 2
script = ExtResource("1_xhyd6")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="FirstRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="SearchQuery" type="Label" parent="VBox/FirstRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderSmall"
text = "Search Query"
text_overrun_behavior = 3

[node name="RepeatSearch" type="Button" parent="VBox/FirstRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"FlatButton"
theme_override_constants/icon_max_width = 20
theme_override_styles/focus = SubResource("StyleBoxFlat_cc2va")
icon = ExtResource("3_xhyd6")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Tooltip" type="Node" parent="VBox/FirstRow/RepeatSearch"]
script = ExtResource("2_5q2o3")
text = "Repeat Search"
popup_position = 5
gap_width = 2

[node name="DayCounter" type="Label" parent="VBox"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.75)
layout_mode = 2
size_flags_horizontal = 2
mouse_filter = 1
text = "1337 days left"

[node name="Tooltip" type="Node" parent="VBox/DayCounter"]
unique_name_in_owner = true
script = ExtResource("2_5q2o3")
text_alignment = 2
